# lasvias-notifier

./: Dockerfile  setup.cfg
lasvias_notifier/: bot.py  cli.py  notifier.py  parser_handler.py  web_parser.py
