[metadata]
name = Las Vias Notifier
version = 0.0.1
description = Simple bot to notify about new session in the local cinema

[options]
packages = find:
install_requires =
    aiogram
    requests

[options.entry_points]
console_scripts =
    lasvias-check = lasvias_notifier.cli:check
    lasvias-films = lasvias_notifier.cli:parse_films
    lasvias-bot = lasvias_notifier.cli:lasvias_bot
